--- a/src/Square.css
+++ b/src/Square.css
@@ -1,6 +1,6 @@
 .box
 {
-  border: 6px solid white;
+  border: 6px solid Lavender;
   font-family: Helvetica;
   font-weight: bold;
   font-size: 4em;
