Added Leaderboard CSS, added app CSS, fixed bug with score changing on draw

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,37 @@
 .App-link {
   color: #61dafb;
 }
+.flex-container {
+  display: inline-flex;
+  justify-content:center;
+  align-items: center; 
+  flex-direction: row;
+    
+}
+.displayBoard{
+  width:100%;
+}
+.displayLeaderboard{
+  display: inline-flex;
 
+  position:absolute;
+  left:0%;
+  padding-left: 1em;
+  
+}
+.displayLeaderboard2{
+  display:none;
+}
+.lead{
+  background-color: #B15B60;
+	font-family: 'Trebuchet MS', sans-serif;
+	color: Lavender;
+	border: 0;
+  outline: 0; 
+  border-radius: .7rem;
+  font-size: 1em;
+  width:30%;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
